--- a/frontend/apps/huectl/src/app/dashboard/dashboard.component.html
+++ b/frontend/apps/huectl/src/app/dashboard/dashboard.component.html
@@ -7,5 +7,9 @@
             <mat-icon>settings</mat-icon>
             <span>Setup</span>
         </button>
+        <button mat-menu-item (click)="openConfig()">
+            <mat-icon>settings</mat-icon>
+            <span>Configuration</span>
+        </button>
     </mat-menu>
 </mat-toolbar>
