--- a/frontend/apps/huectl/src/app/setup-dialog/setup-dialog.component.html
+++ b/frontend/apps/huectl/src/app/setup-dialog/setup-dialog.component.html
@@ -8,11 +8,7 @@
             <mat-option *ngFor="let bridge of state.bridges" [value]="bridge.ipaddress">{{ bridge.ipaddress }}</mat-option>
         </mat-select>
 
-        <button mat-icon-button matSuffix color="primary" (click)="searchForBridge()" *ngIf="!state.bridges">
-            <mat-icon *ngIf="!state.searching">search</mat-icon>
-            <mat-icon *ngIf="state.searching">hourglass_empty</mat-icon>
-        </button>
-
+        <button mat-icon-button matSuffix color="primary" (click)="searchForBridge()" *ngIf="!state.bridges"><mat-icon>search</mat-icon></button>
         <button mat-icon-button matSuffix color="primary" (click)="resetBridgeSearch()" *ngIf="state.bridges"><mat-icon>clear</mat-icon></button>
 
         <mat-error *ngIf="bridgeControl.invalid && bridgeControl.errors.required">Bridge IP is <strong>required</strong></mat-error>
@@ -22,10 +18,7 @@
     <mat-form-field appearance="outline">
         <input matInput formControlName="account" placeholder="Account" />
 
-        <button mat-icon-button matSuffix color="primary" (click)="register()" [disabled]="accountControl.disabled">
-            <mat-icon *ngIf="!state.registering">person_add</mat-icon>
-            <mat-icon *ngIf="state.registering">hourglass_empty</mat-icon>
-        </button>
+        <button mat-icon-button matSuffix color="primary" (click)="register()" [disabled]="accountControl.disabled"><mat-icon>person_add</mat-icon></button>
 
         <mat-error *ngIf="accountControl.invalid && accountControl.errors.required">Account is <strong>required</strong></mat-error>
         <mat-error *ngIf="accountControl.invalid && accountControl.errors.minlength">Account is <strong>too short</strong></mat-error>
