--- a/frontend/apps/huectl/src/app/app.component.sass
+++ b/frontend/apps/huectl/src/app/app.component.sass
@@ -1,14 +1,17 @@
 body
-    min-height: 100vh
-    display: flex
-    justify-content: center
-    align-items: center
-    background: lightgray
     margin: 0
     padding: 0
+//    min-height: 100vh
+//    display: flex
+//    justify-content: center
+//    align-items: center
+//    background: lightgray
 
-hc-root
-    width: 480px
-    height: 320px
-    background: white
-    box-shadow: 0 0 50px 10px rgba(0, 0, 0, .5)
+//
+//hc-root
+//    width: 480px
+//    height: 320px
+//    background: white
+//    box-shadow: 0 0 50px 10px rgba(0, 0, 0, .5)
+//    overflow: auto
+//    position: relative
