--- a/frontend/apps/huectl/src/app/dashboard/dashboard.component.html
+++ b/frontend/apps/huectl/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,1 @@
-<mat-toolbar color="primary">
-    <h1>Hue Ctl</h1>
-    <span class="toolbar-spacer"></span>
-    <button mat-icon-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
-    <mat-menu #menu="matMenu" xPosition="before">
-        <button mat-menu-item (click)="openSetup()">
-            <mat-icon>settings</mat-icon>
-            <span>Setup</span>
-        </button>
-        <button mat-menu-item (click)="openConfig()">
-            <mat-icon>settings</mat-icon>
-            <span>Configuration</span>
-        </button>
-    </mat-menu>
-</mat-toolbar>
+<hc-header></hc-header>
