--- a/frontend/apps/huectl/src/styles.sass
+++ b/frontend/apps/huectl/src/styles.sass
@@ -2,6 +2,9 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons')
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css'
 
+@import "sass/modules/grid"
+@import "sass/modules/content"
+
 .hc-label-button
     &.mat-fab
         height: 156px
