--- a/frontend/apps/huectl/src/app/rooms/rooms.component.html
+++ b/frontend/apps/huectl/src/app/rooms/rooms.component.html
@@ -1,4 +1,6 @@
-<hc-header></hc-header>
+<hc-header>
+    <ng-template #title><h1>Rooms</h1></ng-template>
+</hc-header>
 
 <div class="m-content">
     <div class="m-grid">
