--- a/frontend/apps/huectl/src/app/header/header.component.html
+++ b/frontend/apps/huectl/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary" class="mat-elevation-z4">
-    <h1>Hue Ctl</h1>
+    <h1 *ngIf="!title">Hue Ctl</h1>
+    <ng-container *ngTemplateOutlet="title"></ng-container>
     <span class="toolbar-spacer"></span>
     <button mat-icon-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
     <mat-menu #menu="matMenu" xPosition="before">
