--- a/frontend/apps/huectl/src/styles.sass
+++ b/frontend/apps/huectl/src/styles.sass
@@ -5,6 +5,15 @@
 @import "sass/modules/grid"
 @import "sass/modules/content"
 
+.mat-card-title.flex
+    display: flex
+
+    .mat-icon
+        margin-right: 10px
+
+    .spacer
+        flex: 1 1 auto
+
 .hc-label-button
     &.mat-fab
         height: 156px
