feat: update rooms component

--- a/frontend/apps/huectl/src/app/rooms/rooms.component.html
+++ b/frontend/apps/huectl/src/app/rooms/rooms.component.html
@@ -2,20 +2,47 @@
     <ng-template #title><h1>Rooms</h1></ng-template>
 </hc-header>
 
-<div class="m-content">
-    <div class="m-grid">
-        <div class="m-grid__item" *ngFor="let room of rooms | async">
-            <mat-card [routerLink]="[ '/rooms', room.id ]">
-                <mat-card-title class="flex">
+<div class="m-content" [formGroup]="form">
+    <mat-accordion [multi]="true">
+        <mat-expansion-panel *ngFor="let room of rooms | async; trackBy: trackById; let index = index" hideToggle [formArrayName]="index">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
                     <mat-icon [svgIcon]="room.class" color="primary"></mat-icon>
                     <span>{{ room.name }}</span>
-                    <span class="spacer"></span>
+                </mat-panel-title>
+
+                <mat-panel-description>
+                    <button mat-icon-button [routerLink]="[ '/rooms', room.id ]"><mat-icon>arrow_forward_ios</mat-icon></button>
                     <mat-slide-toggle color="primary"
-                                      [checked]="room?.state?.any_on"
-                                      (click)="$event.stopPropagation()"
-                                      (change)="toggle($event, room)"></mat-slide-toggle>
-                </mat-card-title>
-            </mat-card>
-        </div>
-    </div>
+                                      formControlName="toggle"
+                                      (click)="$event.stopPropagation()"></mat-slide-toggle>
+                </mat-panel-description>
+            </mat-expansion-panel-header>
+
+
+            <mat-slider class="bri" [max]="255" [step]="1" formControlName="bri" (input)="changeFormValue(index, 'bri', $event)"></mat-slider>
+
+            <mat-tab-group [dynamicHeight]="true">
+                <mat-tab>
+                    <span class="color-icon color-icon--hsv" *matTabLabel></span>
+                    <mat-slider class="hue full" [max]="360" formControlName="hue" (input)="changeFormValue(index, 'hue', $event)"></mat-slider>
+                    <mat-slider class="sat full" [max]="255" formControlName="sat" (input)="changeFormValue(index, 'sat', $event)" [hcCssVar]="{ color: colors[index] }"></mat-slider>
+                </mat-tab>
+                <mat-tab>
+                    <span class="color-icon color-icon--ct" *matTabLabel></span>
+
+                    <mat-slider class="ct full" [max]="347" formControlName="ct" (input)="changeFormValue(index, 'ct', $event)"></mat-slider>
+                </mat-tab>
+                <mat-tab>
+                    <mat-icon *matTabLabel>palette</mat-icon>
+
+                    <mat-list>
+                        <ng-container *ngFor="let scene of scenes | async">
+                            <mat-list-item *ngIf="roomHasScene(room, scene)" (click)="activateScene(room, scene)">{{ scene.name }}</mat-list-item>
+                        </ng-container>
+                    </mat-list>
+                </mat-tab>
+            </mat-tab-group>
+        </mat-expansion-panel>
+    </mat-accordion>
 </div>
