--- a/frontend/apps/huectl/src/styles.sass
+++ b/frontend/apps/huectl/src/styles.sass
@@ -48,3 +48,6 @@
             display: flex
             flex-direction: column
             justify-content: center
+
+body
+    overflow-y: scroll
