--- a/frontend/apps/huectl/src/app/header/header.component.html
+++ b/frontend/apps/huectl/src/app/header/header.component.html
@@ -2,15 +2,5 @@
     <h1 *ngIf="!title">Hue Ctl</h1>
     <ng-container *ngTemplateOutlet="title"></ng-container>
     <span class="toolbar-spacer"></span>
-    <button mat-icon-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
-    <mat-menu #menu="matMenu" xPosition="before">
-        <button mat-menu-item (click)="openSetup()">
-            <mat-icon>settings</mat-icon>
-            <span>Setup</span>
-        </button>
-        <button mat-menu-item (click)="openConfig()">
-            <mat-icon>settings</mat-icon>
-            <span>Configuration</span>
-        </button>
-    </mat-menu>
+    <button mat-icon-button (click)="openMenu()"><mat-icon>more_vert</mat-icon></button>
 </mat-toolbar>
