--- a/frontend/apps/huectl/src/app/header/header.component.sass
+++ b/frontend/apps/huectl/src/app/header/header.component.sass
@@ -3,7 +3,11 @@
 
 hc-header
     display: block
-    height: 56px
+    height: 64px
+
+    @media (max-width: 599px)
+        height: 56px
+        
     .mat-toolbar
         position: fixed
         z-index: 500
