--- a/frontend/apps/huectl/src/app/app.component.sass
+++ b/frontend/apps/huectl/src/app/app.component.sass
@@ -8,3 +8,15 @@ hc-root
 
     > *
         flex-grow: 1
+
+    .mat-sidenav
+        display: flex
+        flex-direction: column
+
+        .mat-nav-list
+            flex-grow: 1
+            display: flex
+            flex-direction: column
+
+            .mat-divider
+                margin-top: auto
