--- a/frontend/apps/huectl/src/app/rooms/rooms.component.html
+++ b/frontend/apps/huectl/src/app/rooms/rooms.component.html
@@ -1,5 +1,8 @@
 <hc-header>
-    <ng-template #title><h1>Rooms</h1></ng-template>
+    <ng-template #title>
+        <button mat-icon-button [routerLink]="[ '..' ]"><mat-icon>arrow_back_ios</mat-icon></button>
+        <h1>Rooms</h1>
+    </ng-template>
 </hc-header>
 
 <div class="m-content" [formGroup]="form">
