--- a/frontend/libs/loading/src/lib/loading-dialog/loading-dialog.component.html
+++ b/frontend/libs/loading/src/lib/loading-dialog/loading-dialog.component.html
@@ -1,4 +1,5 @@
-<h1 matDialogTitle>Loading...</h1>
-<div matDialogContent>
+<h1 matDialogTitle>{{ title }}</h1>
+<div matDialogContent class="mat-typography">
     <mat-spinner diameter="50"></mat-spinner>
+    <span *ngIf="description">{{ description }}</span>
 </div>
