--- a/frontend/libs/loading/src/lib/loading-dialog/loading-dialog.component.sass
+++ b/frontend/libs/loading/src/lib/loading-dialog/loading-dialog.component.sass
@@ -1,4 +1,11 @@
 hc-loading-dialog
     .mat-dialog-content
         overflow: hidden
-        width: 200px
+        min-width: 200px
+        max-width: 90vw
+        display: flex
+        flex-direction: row
+        align-items: center
+
+        > *:first-child
+            margin-right: 16px
