--- a/frontend/apps/huectl/src/app/dashboard/dashboard.component.html
+++ b/frontend/apps/huectl/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
                 <small i18n>{roomCount.on, plural, =0 {Non} =1 {One} other {{{ roomCount.on }}}} of your {roomCount.total, plural, =0 {zero rooms } =1 {one room } other {{{ roomCount.total }} rooms }} {roomCount.on, plural, =1 {is on} other {are on}}.</small>
             </mat-card-content>
         </mat-card>
-        <mat-card [routerLink]="[ '/groups' ]">
+        <mat-card [routerLink]="[ '/light-groups' ]">
             <mat-card-content>
                 <mat-icon>group_work</mat-icon>
                 <h2>Light Groups</h2>
