fix: fix menu item

--- a/frontend/apps/huectl/src/app/app.component.html
+++ b/frontend/apps/huectl/src/app/app.component.html
@@ -21,7 +21,7 @@
             </a>
             <a mat-list-item [routerLink]="[ '/light-groups' ]" (click)="closeMenu()">
                 <mat-icon color="primary" matListIcon>group_work</mat-icon>
-                <span matLine i18n>Rooms</span>
+                <span matLine i18n>Light Groups</span>
             </a>
             <mat-divider></mat-divider>
             <a mat-list-item (click)="openSetup()">
