--- a/frontend/apps/huectl/src/app/configuration-dialog/configuration-dialog.component.html
+++ b/frontend/apps/huectl/src/app/configuration-dialog/configuration-dialog.component.html
@@ -2,7 +2,7 @@
 
 <div [formGroup]="form" matDialogContent fxLayout="column">
     <mat-form-field [floatLabel]="true">
-        <mat-select matInput formControlName="room" placeholder="Room">
+        <mat-select matInput formControlName="room" i18n-placeholder placeholder="Room">
             <mat-option [value]="null"><strong>None</strong></mat-option>
             <mat-divider></mat-divider>
             <mat-optgroup *ngFor="let entry of rooms | async | keyvalue" [label]="entry.key">
@@ -11,13 +11,13 @@
         </mat-select>
     </mat-form-field>
     <mat-form-field [floatLabel]="true">
-        <mat-select matInput formControlName="theme" placeholder="theme">
+        <mat-select matInput formControlName="theme" i18n-placeholder placeholder="Theme">
             <mat-option *ngFor="let theme of themes" [value]="theme.id">{{ theme.name }}</mat-option>
         </mat-select>
     </mat-form-field>
 </div>
 
 <mat-dialog-actions align="end">
-    <button mat-button matDialogClose>Abort</button>
-    <button mat-button color="primary" [disabled]="form.invalid" (click)="save()">Save</button>
+    <button mat-button matDialogClose i18n>Abort</button>
+    <button mat-button color="primary" [disabled]="form.invalid" (click)="save()" i18n>Save</button>
 </mat-dialog-actions>
