--- a/frontend/apps/huectl/src/app/header/header.component.html
+++ b/frontend/apps/huectl/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="mat-elevation-z4">
-    <h1 *ngIf="!title">Hue Control</h1>
+    <h1 *ngIf="!title" i18n>Hue Control</h1>
     <ng-container *ngTemplateOutlet="title"></ng-container>
     <span class="toolbar-spacer"></span>
     <button mat-icon-button (click)="openMenu()"><mat-icon>more_vert</mat-icon></button>
