--- a/frontend/apps/huectl/src/app/setup-dialog/setup-dialog.component.html
+++ b/frontend/apps/huectl/src/app/setup-dialog/setup-dialog.component.html
@@ -2,31 +2,31 @@
 
 <div [formGroup]="form" matDialogContent fxLayout="column">
     <mat-form-field [floatLabel]="true">
-        <input matInput formControlName="bridge" placeholder="Bridge IP" *ngIf="!state.bridges" />
+        <input matInput formControlName="bridge" i18n-placeholder placeholder="Bridge IP" *ngIf="!state?.bridges" />
 
-        <mat-select matInput formControlName="bridge" placeholder="Bridge IP" *ngIf="state.bridges">
+        <mat-select matInput formControlName="bridge" i18n-placeholder placeholder="Bridge IP" *ngIf="state?.bridges">
             <mat-option *ngFor="let bridge of state.bridges" [value]="bridge.ipaddress">{{ bridge.ipaddress }}</mat-option>
         </mat-select>
 
-        <button mat-icon-button matSuffix color="primary" (click)="searchForBridge()" *ngIf="!state.bridges"><mat-icon>search</mat-icon></button>
-        <button mat-icon-button matSuffix color="primary" (click)="resetBridgeSearch()" *ngIf="state.bridges"><mat-icon>clear</mat-icon></button>
+        <button mat-icon-button matSuffix color="primary" (click)="searchForBridge()" *ngIf="!state?.bridges"><mat-icon>search</mat-icon></button>
+        <button mat-icon-button matSuffix color="primary" (click)="resetBridgeSearch()" *ngIf="state?.bridges"><mat-icon>clear</mat-icon></button>
 
-        <mat-error *ngIf="bridgeControl.invalid && bridgeControl.errors.required">Bridge IP is <strong>required</strong></mat-error>
-        <mat-error *ngIf="bridgeControl.invalid && bridgeControl.errors.pattern">Bridge IP is <strong>invalid</strong></mat-error>
+        <mat-error *ngIf="bridgeControl.invalid && bridgeControl.errors?.required">Bridge IP is <strong>required</strong></mat-error>
+        <mat-error *ngIf="bridgeControl.invalid && bridgeControl.errors?.pattern">Bridge IP is <strong>invalid</strong></mat-error>
     </mat-form-field>
 
     <mat-form-field [floatLabel]="true">
-        <input matInput formControlName="account" placeholder="Account" />
+        <input matInput formControlName="account" i18n-placeholder placeholder="Account" />
 
         <button mat-icon-button matSuffix color="primary" (click)="register()" [disabled]="accountControl.disabled"><mat-icon>person_add</mat-icon></button>
 
-        <mat-error *ngIf="accountControl.invalid && accountControl.errors.required">Account is <strong>required</strong></mat-error>
-        <mat-error *ngIf="accountControl.invalid && accountControl.errors.minlength">Account is <strong>too short</strong></mat-error>
-        <mat-error *ngIf="accountControl.invalid && accountControl.errors.maxlength">Account is <strong>too long</strong></mat-error>
+        <mat-error *ngIf="accountControl.invalid && accountControl.errors?.required">Account is <strong>required</strong></mat-error>
+        <mat-error *ngIf="accountControl.invalid && accountControl.errors?.minlength">Account is <strong>too short</strong></mat-error>
+        <mat-error *ngIf="accountControl.invalid && accountControl.errors?.maxlength">Account is <strong>too long</strong></mat-error>
     </mat-form-field>
 </div>
 
 <mat-dialog-actions align="end">
-    <button mat-button *ngIf="!ref.disableClose" matDialogClose>Abort</button>
-    <button mat-button color="primary" [disabled]="form.invalid" (click)="save()">Save</button>
+    <button mat-button *ngIf="!ref.disableClose" matDialogClose i18n>Abort</button>
+    <button mat-button color="primary" [disabled]="form.invalid" (click)="save()" i18n>Save</button>
 </mat-dialog-actions>
