--- a/frontend/apps/huectl/src/app/app.component.sass
+++ b/frontend/apps/huectl/src/app/app.component.sass
@@ -2,6 +2,12 @@ body
     margin: 0
     padding: 0
 
+    @media screen and (max-width: 800px)
+        &::-webkit-scrollbar
+            display: none
+
+
+
 hc-root
     min-height: 100vh
     display: flex
